Add incremental MediaStore synchronization
